tests/ui/impl-trait/generic-with-implicit-hrtb-without-dyn.edition2015.stderr
error[E0277]: the trait `AsRef<dyn for<'a> Fn(&'a ())>` is not implemented for `()`
  --> $DIR/generic-with-implicit-hrtb-without-dyn.rs:6:13
   |
LL | fn ice() -> impl AsRef<Fn(&())> {
   |             ^^^^^^^^^^^^^^^^^^^ the trait `AsRef<dyn for<'a> Fn(&'a ())>` is not implemented for `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
